monitoring/petclinic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: example.snapwork.com
    http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: petclinic-service-ext
            port: 
              number: 8080
