monitoring/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: example.snapwork.com
    http:
      paths:
      - path: /graph
        pathType: Prefix
        backend:
          service:
            name: moitoring-kube-prometheus-prometheus-ext
            port: 
              number: 9090
