monitoring/trivy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trivy-ingress
  namespace: trivy-system
  annotations:
    # Optional: Add annotations for Ingress controllers if required
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.snapwork.com # Replace with your domain
    http:
      paths:
      - path: /trivy
        pathType: Prefix
        backend:
          service:
            name: trivy-operator-ext
            port:
              number: 80
